--- a/inventory/inventory_manager.ipynb
+++ b/inventory/inventory_manager.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "904b65ff",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,8 @@
     "\n",
     "#displaying each indiv item. hard coded (no input from user)\n",
     "inventory = Inventory()\n",
-    "nutrients = {\"calories\" : 100, \"protein\": 300, \"vits\": ['A','B','C','D']}\n",
+    "vitamins = ['A', 'B12', 'D']\n",
+    "nutrients = {\"calories\" : 100, \"protein\": 300, \"vits\": [for v in vitamins] }\n",
     "foodItem1 = FoodItem( \"Chicken\",\"2005-06-06\",nutrients, 100)\n",
     "foodItem1.setID(\"ITM202501\")\n",
     "print(foodItem1.__str__())"
