--- a/inventory/inventory_manager.ipynb
+++ b/inventory/inventory_manager.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "48cf5469",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from tabulate import tabulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "7e6a2371",
    "metadata": {},
    "outputs": [],
@@ -24,7 +25,6 @@
     "        self.expiry =  datetime.strptime(expiry, \"%Y-%m-%d\")\n",
     "        self.nutrients = nutrients\n",
     "        self.quantity = quantity\n",
-    "        \n",
     "    \n",
     "    def setID(self, id): \n",
     "        self.id = id\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "6ceab8f3",
    "metadata": {},
    "outputs": [],
@@ -54,10 +54,9 @@
     "        self.items = {} #dictionary that stores all the food items#\n",
     "\n",
     "    def add_item(self, id, name, expiry, nutrients, quantity):\n",
-    "        expiry = datetime.strptime(expiry, \"%Y-%m-%d\")\n",
     "        newItem = FoodItem(name, expiry, nutrients, quantity)\n",
     "        newItem.setID(id)\n",
-    "        self.items[newItem.getID] = newItem #the food item created gets added to the inventory dictionary with the ITEM ID as\n",
+    "        self.items[newItem.getID()] = newItem #the food item created gets added to the inventory dictionary with the ITEM ID as\n",
     "        # its key and the specified infos as its values \n",
     "        \n",
     "    def search_item(self, targetItem):\n",
@@ -69,11 +68,36 @@
     "                    return self.items[targetItem]\n",
     "                \n",
     "    def display_inventory(self):\n",
-    "        if self.items == None: \n",
+    "\n",
+    "\n",
+    "        \"\"\"if self.items == None: \n",
     "            print(\"Inventory is empty.\")\n",
     "        else: \n",
     "            for item_id, item_details in self.items.items():\n",
-    "                print(f\"{item_id} : {item_details}\")\n",
+    "                print(f\"{item_id} : {item_details}\")\"\"\"\n",
+    "        if not self.items:\n",
+    "            print(\"📦 Inventory is empty.\")\n",
+    "            return\n",
+    "\n",
+    "        table_data = []\n",
+    "        for item_id, item in self.items.items():\n",
+    "            vits = \", \".join(item.nutrients[\"vits\"])\n",
+    "            table_data.append([\n",
+    "                item_id,\n",
+    "                item.name,\n",
+    "                item.expiry.date(),\n",
+    "                item.quantity,\n",
+    "                item.nutrients[\"calories\"],\n",
+    "                item.nutrients[\"protein\"],\n",
+    "                vits\n",
+    "            ])\n",
+    "\n",
+    "        headers = [\"ID\", \"Name\", \"Expiry\", \"Quantity\", \"Calories\", \"Protein\", \"Vitamins\"]\n",
+    "        print(tabulate(table_data, headers=headers, tablefmt=\"grid\"))        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "                \n",
     "    def get_details(self):\n",
     "        name =  input(\"Enter the name of the food item:\")\n",
@@ -92,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "904b65ff",
    "metadata": {},
    "outputs": [
@@ -104,7 +128,7 @@
       "Name: Chicken \n",
       "Expiry: 2005-06-06 \n",
       "Quantity: 100 \n",
-      "Nutrients: {'calories': 100, 'protein': 300, 'vits': ['A', 'B', 'C', 'D']}\n"
+      "Nutrients: {'calories': 100, 'protein': 300, 'vits': ['A', 'B12', 'D']}\n"
      ]
     }
    ],
@@ -113,7 +137,7 @@
     "#displaying each indiv item. hard coded (no input from user)\n",
     "inventory = Inventory()\n",
     "vitamins = ['A', 'B12', 'D']\n",
-    "nutrients = {\"calories\" : 100, \"protein\": 300, \"vits\": [for v in vitamins] }\n",
+    "nutrients = {\"calories\" : 100, \"protein\": 300, \"vits\": vitamins}\n",
     "foodItem1 = FoodItem( \"Chicken\",\"2005-06-06\",nutrients, 100)\n",
     "foodItem1.setID(\"ITM202501\")\n",
     "print(foodItem1.__str__())"
@@ -121,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "756c78cf",
    "metadata": {},
    "outputs": [
@@ -129,18 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose an action:\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChoose an action:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     inp = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m1. Add an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 2.Search an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 3.Delete an item \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 4.View inventory \u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[33;43m 5. Exit\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m inp == \u001b[32m1\u001b[39m:\n\u001b[32m      6\u001b[39m         \u001b[38;5;28mid\u001b[39m, name, expiry, nutrients, quantity = inventory.get_details()\n",
-      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
+      "📦 Inventory is empty.\n"
      ]
     }
    ],
