--- a/inventory/inventory_manager.ipynb
+++ b/inventory/inventory_manager.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "48cf5469",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "from tabulate import tabulate"
+    "from tabulate import tabulate ##this is to display inventory in table format (this is tentative, and will be removed \n",
+    "# if we decided to incorporate a GUI)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "7e6a2371",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "6ceab8f3",
    "metadata": {},
    "outputs": [],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "904b65ff",
    "metadata": {},
    "outputs": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "756c78cf",
    "metadata": {},
    "outputs": [
@@ -153,18 +154,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📦 Inventory is empty.\n"
+      "Choose an action:\n",
+      "Enter nutritional info:\n",
+      "Choose an action:\n",
+      "Enter nutritional info:\n",
+      "Choose an action:\n",
+      "+-----------+----------+------------+------------+------------+-----------+------------+\n",
+      "| ID        | Name     | Expiry     |   Quantity |   Calories |   Protein | Vitamins   |\n",
+      "+===========+==========+============+============+============+===========+============+\n",
+      "| VEG25001  | brocolli | 2025-10-05 |        100 |        100 |        50 | A, B12, K  |\n",
+      "+-----------+----------+------------+------------+------------+-----------+------------+\n",
+      "| CARB24001 | Rice     | 2025-10-04 |       1000 |        300 |        10 | 10         |\n",
+      "+-----------+----------+------------+------------+------------+-----------+------------+\n"
      ]
     }
    ],
    "source": [
+    "##adding to and displaying inventory (With user input)\n",
+    "\n",
     "inventory = Inventory()\n",
-    "while inp != 5:\n",
+    "while True:\n",
     "    print(\"Choose an action:\")\n",
     "    inp = int(input(\"1. Add an item \\n 2.Search an item \\n 3.Delete an item \\n 4.View inventory \\n 5. Exit\"))\n",
     "    if inp == 1:\n",
     "        id, name, expiry, nutrients, quantity = inventory.get_details()\n",
     "        inventory.add_item(id, name, expiry, nutrients, quantity)\n",
+    "        continue\n",
+    "    elif inp == 2: \n",
+    "        pass\n",
+    "    elif inp == 3: \n",
+    "        pass\n",
+    "    elif inp == 4: \n",
+    "        pass\n",
+    "    elif inp == 5: \n",
+    "        break\n",
     "inventory.display_inventory()"
    ]
   }
